# hhdream_study

./: .env  .gitignore  config.py  frontend.py  main_flow.py  pyproject.toml  temp_for_parser.html  web_scraper.py
ES.C95914/: 7303403ES_FY26.xls  7303427ES_FY26.xls  7305525ES_FY26.xls  7385652ES_FY26.xls  7385869ES_FY26.xls  7385907ES_FY26.xls  7388170ES_FY26.xls
app/: html_parser.py  read_write_excel.py
info_extraction/: config.py  html_parser.py  model.py  qb_client.py  read_write_excel.py  result_to_excel.py  web_scraper.py
